--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+proguard (3.2-2) unstable; urgency=low
+
+  * fix java executable name in proguard and proguardgui shell
+    scripts (Closes: #311966)
+
+ -- Sam Clegg <samo@debian.org>  Sat,  4 Jun 2005 21:17:01 +0100
+
 proguard (3.2-1) unstable; urgency=low
 
   * Initial Release (Closes: #310044).
