--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+proguard (4.8-1) UNRELEASED; urgency=medium
+
+  * Team upload.
+  * debian/control:
+    - Added the Vcs-* fields
+
+ -- Emmanuel Bourg <ebourg@apache.org>  Thu, 10 Apr 2014 11:47:46 +0200
+
 proguard (4.8-0.1) unstable; urgency=low
 
   * Non-maintainer upload.
