--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ proguard (4.8-1) UNRELEASED; urgency=medium
 
   * Team upload.
   * debian/control:
+    - The package is now co-maintained with the Java Team
     - Added the Vcs-* fields
 
  -- Emmanuel Bourg <ebourg@apache.org>  Thu, 10 Apr 2014 11:47:46 +0200
