--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+proguard (5.0-1) unstable; urgency=medium
+
+  * Team upload.
+  * New upstream release (Closes: #754964)
+    - Increased the source/target level to 1.5
+
+ -- Emmanuel Bourg <ebourg@apache.org>  Thu, 21 Aug 2014 07:55:44 +0200
+
 proguard (4.11-1) unstable; urgency=medium
 
   * Team upload.
